--- a/README
+++ b/README
@@ -1,4 +1,19 @@
-This is your new Play 2.1 application
+=====================================
+  Play 2 SpaceShips!
+=====================================
+Require:  Play 2.1.1
 =====================================
 
-This file will be packaged with your application, when using `play dist`.
+Author: Mathieu Ancelin - SERLI
+
+- From your laptop, start the play application
+- Open one or many web browser to http://localhost:9000/ to display the game board
+- From your IPad/IPhone/Android phones (funnier if multiple players ;-) ), open a web browser and connect to your laptop, e.g http://192.168.0.1:9000/m
+- Enter your name then press Play
+- Play from your iphone, each event gets sent to the server. Use the iphone as a command. Left tumb to move, right thumb to fire.
+
+This application uses Akka, WebSockets, Server Sent Event and is a pure demo of Reacting programming with Play! Framework.
+
+http://www.playframework.org/
+
+=====================================
